--- a/beansgari.html
+++ b/beansgari.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Beans and Gari</title>
+    <title>Beans and Gari(Gob3)</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../dist/output.css" rel="stylesheet">
